更新mysql数据库笔记

--- a/MySQL（待完善）/创建，删除数据库及数据表.md
+++ b/MySQL（待完善）/创建，删除数据库及数据表.md
@@ -1,12 +1,12 @@
-# 增删改查
+## 创建，删除数据库及数据表
 
 [toc]
 
-# MySQL 创建数据库
+## MySQL 创建数据库
 
 ------
 
-登陆 MySQL 服务后，使用 **create** 命令创建数据库，语法如下:
+我们可以在登陆 MySQL 服务后，使用 **create** 命令创建数据库，语法如下:
 
 ```sql
 CREATE DATABASE 数据库名;
@@ -21,7 +21,7 @@ Enter password:******  # 登录后进入终端
 mysql> create DATABASE RUNOOB;
 ```
 
-# MySQL 删除数据库
+## MySQL 删除数据库
 
 ------
 
@@ -45,7 +45,7 @@ drop database <数据库名>;
 mysql> drop database RUNOOB;
 ```
 
-# MySQL 创建数据表
+## MySQL 创建数据表
 
 创建MySQL数据表需要以下信息：
 
@@ -85,7 +85,7 @@ CREATE TABLE IF NOT EXISTS `runoob_tbl`(
 
 - ENGINE 设置存储引擎，CHARSET 设置编码。
 
-# MySQL 删除数据表
+## MySQL 删除数据表
 
 MySQL中删除数据表是非常容易操作的， 但是你再进行删除表操作时要非常小心，因为执行删除命令后所有数据都会消失。
 
@@ -139,20 +139,3 @@ drop table student;
 
 3、当你要删除部分记录时， 用 **delete**。
 
-# MySQL 插入数据
-
-MySQL 表中使用 **INSERT INTO** SQL语句来插入数据。
-
-你可以通过 mysql> 命令提示窗口中向数据表中插入数据，或者通过PHP脚本来插入数据。
-
-### 语法
-
-以下为向MySQL数据表插入数据通用的 **INSERT INTO** SQL语法：
-
-```sql
-INSERT INTO table_name ( field1, field2,...fieldN )
-                       VALUES
-                       ( value1, value2,...valueN );
-```
-
-如果数据是字符型，必须使用单引号或者双引号，如："value"。
